--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>MEMORY-GAME-BICTE-FIRST-SEMESTER</title>
   </head>
   <body>
+    <!-- main_panel -->
+    <div class="main-panel">
+
+      <!-- section one  -->
+      <section class="main-panel__section1">
+        <h1>Sukuna Multiple<br><span class="span_word">Campus.</span></h1>
+        <div class="email_section">
+          <h4 class="email_h4" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Dear People,<br><br>
+            Welcome to our project. We represent a small part of Sukuna Multiple<br>Campus, featured in this expo.We are the aspiring Bicte (Bachelor of Information<br> Communication Technology and Education), specifically representing the first semester<br>of 2080. Our website aims to inspire the upcoming generation and contribute our skills<br>to budding web developers using HTML5, SASS, JavaScript, NPM,<br>and the design tool Figma. Enjoy a memory game and celebrate technology<br>with us.<br><br>
+            Thank you.</h4>
+        </div>
+        <div class="member_section">
+          <div class="dv1">
+            <h4 class="email_h4" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Developed By.<br><span><p>Komal koirala,<br>Sujan limbu, <br>Manish Subedi,<br>Aayush Niraula,<br>Keshav Lamsal.</p></span></h4>
+          </div>
+        </div>
+      </section>
+
+      <!-- section two -->
+      <section class="main-panel__section2">
+        <div class="dashboard_section">
+          <div class="timer"><h4>Timer: <Span>0:0</Span></h4></div>
+          <div class="btn">Start</div>
+          <div class="btn">Restart</div>
+        </div>
+      </section>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
+
+<!-- 
+<h3>BACHELOR OF INFORMATION COMMUNICATION TECHNOLOGY AND EDUCATION</h3>
+        <h4>Represented by the first semester of the Bachelor of Information Communication Technology and Education, 2080 batch.</h4>
+        <p>Developed by Bishal Koirala, the tech lead. Designed by Manish Subedi, Sujan Limbu, and Aayush Niraula.</p> -->
+
+<!-- Thank you for entire team for team for this project. Even though this small project is not that big and comlicated we all have learned lot's of new skill and technology. Thank you -->
